--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   },
   "homepage": "https://github.com/script/cli#readme",
   "devDependencies": {
+    "@types/node": "^11.11.0",
+    "commander": "^2.19.0",
     "gts": "^0.9.0",
     "typescript": "^3.3.3333"
-  }
+  },
+  "dependencies": {}
 }
